fixed calendar spacing

--- a/client/src/pages/CalendarPage.scss
+++ b/client/src/pages/CalendarPage.scss
@@ -1,6 +1,6 @@
 @import '../_theme.scss';
 
-.calendar{
+.calendarPage{
 
     //background-color: crimson;
     height: 100vh;
@@ -10,10 +10,15 @@
 
     .middle{
         display: flex;
-        height: 75%;
+        height: 70%;
         flex-direction: column;
         align-items: center;
         padding: 20px;
+
+        .calendar{
+            height: 100%;
+            width: 100%;
+        }
     }
 
 }
